@@ -9,7 +9,6 @@ import org.springframework.retry.annotation.Recover;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.ccd.client.CaseAccessDataStoreApi;
 import uk.gov.hmcts.reform.ccd.client.CaseAssignmentApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseAssignmentUserRolesResource;
 import uk.gov.hmcts.reform.ccd.model.AddCaseAssignedUserRolesRequest;
@@ -19,6 +18,8 @@ import uk.gov.hmcts.reform.ccd.model.CaseAssignedUserRolesRequest;
 import uk.gov.hmcts.reform.ccd.model.CaseAssignedUserRolesResource;
 import uk.gov.hmcts.reform.civil.config.CrossAccessUserConfiguration;
 import uk.gov.hmcts.reform.civil.enums.CaseRole;
+import uk.gov.hmcts.reform.civil.exceptions.CaseAccessDataStoreCircuitOpenException;
+import uk.gov.hmcts.reform.civil.exceptions.CaseAccessDataStoreUnavailableException;
 import uk.gov.hmcts.reform.civil.exceptions.RetryableCaseUserException;
 
 import java.util.Collections;
@@ -30,16 +31,16 @@ public class CoreCaseUserService {
 
     Logger log = LoggerFactory.getLogger(CoreCaseUserService.class);
 
-    private final CaseAccessDataStoreApi caseAccessDataStoreApi;
+    private final CaseAccessDataStoreService caseAccessDataStoreService;
     private final CaseAssignmentApi caseAssignmentApi;
     private final UserService userService;
     private final CrossAccessUserConfiguration crossAccessUserConfiguration;
     private final AuthTokenGenerator authTokenGenerator;
 
-    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500))
+    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500, multiplier = 2))
     public List<String> getUserCaseRoles(String caseId, String userId) {
         try {
-            return caseAccessDataStoreApi.getUserRoles(
+            return caseAccessDataStoreService.getUserRoles(
                     getCaaAccessToken(),
                     authTokenGenerator.generate(),
                     List.of(caseId)
@@ -47,54 +48,96 @@ public class CoreCaseUserService {
                 .getCaseAssignedUserRoles().stream()
                 .filter(c -> c.getUserId().equals(userId)).distinct()
                 .map(CaseAssignedUserRole::getCaseRole).toList();
-        } catch (FeignException.GatewayTimeout | FeignException.BadGateway | FeignException.ServiceUnavailable e) {
-            throw new RetryableCaseUserException(e.getMessage(), e);
         } catch (FeignException.NotFound ex) {
             log.error("User Roles not found", ex);
             return Collections.emptyList();
-        } catch (Exception ex) {
-            log.error("[CoreCaseUserService] Unexpected error occurred", ex);
-            return Collections.emptyList();
+        } catch (Exception e) {
+            throw handleException(e);
+        }
+    }
+
+    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500, multiplier = 2))
+    public void assignCase(String caseId, String userId, String organisationId, CaseRole caseRole) {
+        try {
+            String caaAccessToken = getCaaAccessToken();
+
+            if (!userWithCaseRoleExistsOnCase(caseId, caaAccessToken, caseRole, userId)) {
+                assignUserToCaseForRole(caseId, userId, organisationId, caseRole, caaAccessToken);
+            } else {
+                log.info("Case already have the user with {} role", caseRole.getFormattedName());
+            }
+        } catch (Exception e) {
+            throw handleException(e);
+        }
+    }
+
+    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500, multiplier = 2))
+    public void unassignCase(String caseId, String userId, String organisationId, CaseRole caseRole) {
+        try {
+            String caaAccessToken = getCaaAccessToken();
+            if (userWithCaseRoleExistsOnCase(caseId, caaAccessToken, caseRole, userId)) {
+                CaseAssignedUserRoleWithOrganisation caseAssignedUserRoleWithOrganisation = new CaseAssignedUserRoleWithOrganisation()
+                    .setCaseDataId(caseId)
+                    .setUserId(userId)
+                    .setCaseRole(caseRole.getFormattedName())
+                    .setOrganisationId(organisationId);
+                removeAccessFromRole(caseAssignedUserRoleWithOrganisation, caaAccessToken);
+            }
+        } catch (Exception e) {
+            throw handleException(e);
+        }
+    }
+
+    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500, multiplier = 2))
+    public void removeCreatorRoleCaseAssignment(String caseId, String userId, String organisationId) {
+        try {
+            String caaAccessToken = getCaaAccessToken();
+
+            if (userWithCaseRoleExistsOnCase(caseId, caaAccessToken, CaseRole.CREATOR, userId)) {
+                removeCreatorAccess(caseId, userId, organisationId, caaAccessToken);
+            } else {
+                log.info("User doesn't have {} role", CaseRole.CREATOR.getFormattedName());
+            }
+        } catch (Exception e) {
+            throw handleException(e);
         }
     }
 
     @Recover
-    public List<String> recover(RetryableCaseUserException ex) {
-        log.error("[CoreCaseUserService] Retryable User Case Roles lookup failed after retries", ex);
+    public List<String> recover(Exception ex, String caseId, String userId) {
+        if (ex instanceof CaseAccessDataStoreCircuitOpenException circuitOpenException) {
+            throw circuitOpenException;
+        }
+        log.error("[CoreCaseUserService] User Case Roles lookup failed. CaseId: {}, UserId: {}",
+                  caseId, userId, ex);
         return Collections.emptyList();
     }
 
-    public void assignCase(String caseId, String userId, String organisationId, CaseRole caseRole) {
-        String caaAccessToken = getCaaAccessToken();
-
-        if (!userWithCaseRoleExistsOnCase(caseId, caaAccessToken, caseRole, userId)) {
-            assignUserToCaseForRole(caseId, userId, organisationId, caseRole, caaAccessToken);
-        } else {
-            log.info("Case already have the user with {} role", caseRole.getFormattedName());
+    @Recover
+    public void recover(Exception ex, String caseId, String userId, String organisationId, CaseRole caseRole) {
+        if (ex instanceof CaseAccessDataStoreCircuitOpenException circuitOpenException) {
+            throw circuitOpenException;
         }
+        log.error("[CoreCaseUserService] assignCase/unassignCase failed. CaseId: {}, UserId: {}, Role: {}",
+                  caseId, userId, caseRole, ex);
     }
 
-    public void unassignCase(String caseId, String userId, String organisationId, CaseRole caseRole) {
-        String caaAccessToken = getCaaAccessToken();
-        if (userWithCaseRoleExistsOnCase(caseId, caaAccessToken, caseRole, userId)) {
-            CaseAssignedUserRoleWithOrganisation caseAssignedUserRoleWithOrganisation = new CaseAssignedUserRoleWithOrganisation()
-                .setCaseDataId(caseId)
-                .setUserId(userId)
-                .setCaseRole(caseRole.getFormattedName())
-                .setOrganisationId(organisationId);
-            removeAccessFromRole(caseAssignedUserRoleWithOrganisation, caaAccessToken);
+    @Recover
+    public void recover(Exception ex, String caseId, String userId, String organisationId) {
+        if (ex instanceof CaseAccessDataStoreCircuitOpenException circuitOpenException) {
+            throw circuitOpenException;
         }
+        log.error("[CoreCaseUserService] removeCreatorRoleCaseAssignment failed. CaseId: {}, UserId: {}",
+                  caseId, userId, ex);
     }
 
-    public void removeCreatorRoleCaseAssignment(String caseId, String userId, String organisationId) {
-
-        String caaAccessToken = getCaaAccessToken();
-
-        if (userWithCaseRoleExistsOnCase(caseId, caaAccessToken, CaseRole.CREATOR, userId)) {
-            removeCreatorAccess(caseId, userId, organisationId, caaAccessToken);
-        } else {
-            log.info("User doesn't have {} role", CaseRole.CREATOR.getFormattedName());
+    @Recover
+    public CaseAssignmentUserRolesResource recover(Exception ex, String caseId) {
+        if (ex instanceof CaseAccessDataStoreCircuitOpenException circuitOpenException) {
+            throw circuitOpenException;
         }
+        log.error("[CoreCaseUserService] getUserRoles failed. CaseId: {}", caseId, ex);
+        return CaseAssignmentUserRolesResource.builder().caseAssignmentUserRoles(Collections.emptyList()).build();
     }
 
     public boolean userHasCaseRole(String caseId, String userId, CaseRole caseRole) {
@@ -102,12 +145,33 @@ public class CoreCaseUserService {
             .anyMatch(c -> c.equals(caseRole.getFormattedName()));
     }
 
+    @Retryable(retryFor = RetryableCaseUserException.class, backoff = @Backoff(delay = 500, multiplier = 2))
     public CaseAssignmentUserRolesResource getUserRoles(String caseId) {
-        return caseAssignmentApi.getUserRoles(
-            getCaaAccessToken(),
-            authTokenGenerator.generate(),
-            List.of(caseId)
-        );
+        try {
+            return caseAssignmentApi.getUserRoles(
+                getCaaAccessToken(),
+                authTokenGenerator.generate(),
+                List.of(caseId)
+            );
+        } catch (FeignException.NotFound ex) {
+            log.error("User Roles not found", ex);
+            return CaseAssignmentUserRolesResource.builder().caseAssignmentUserRoles(Collections.emptyList()).build();
+        } catch (Exception e) {
+            throw handleException(e);
+        }
+    }
+
+    private RuntimeException handleException(Exception e) {
+        if (e instanceof FeignException.GatewayTimeout
+            || e instanceof FeignException.BadGateway
+            || e instanceof FeignException.ServiceUnavailable
+            || (e instanceof CaseAccessDataStoreUnavailableException && !(e instanceof CaseAccessDataStoreCircuitOpenException))) {
+            return new RetryableCaseUserException(e.getMessage(), e);
+        }
+        if (e instanceof RuntimeException runtimeException) {
+            return runtimeException;
+        }
+        return new RuntimeException(e.getMessage(), e);
     }
 
     private String getCaaAccessToken() {
@@ -126,7 +190,7 @@ public class CoreCaseUserService {
             .setCaseRole(caseRole.getFormattedName())
             .setOrganisationId(organisationId);
 
-        caseAccessDataStoreApi.addCaseUserRoles(
+        caseAccessDataStoreService.addCaseUserRoles(
             caaAccessToken,
             authTokenGenerator.generate(),
             new AddCaseAssignedUserRolesRequest()
@@ -146,7 +210,7 @@ public class CoreCaseUserService {
     }
 
     private void removeAccessFromRole(CaseAssignedUserRoleWithOrganisation caseAssignedUserRoleWithOrganisation, String caaAccessToken) {
-        caseAccessDataStoreApi.removeCaseUserRoles(
+        caseAccessDataStoreService.removeCaseUserRoles(
             caaAccessToken,
             authTokenGenerator.generate(),
             new CaseAssignedUserRolesRequest()
@@ -155,7 +219,7 @@ public class CoreCaseUserService {
     }
 
     private boolean userWithCaseRoleExistsOnCase(String caseId, String accessToken, CaseRole caseRole, String userId) {
-        CaseAssignedUserRolesResource userRoles = caseAccessDataStoreApi.getUserRoles(
+        CaseAssignedUserRolesResource userRoles = caseAccessDataStoreService.getUserRoles(
             accessToken,
             authTokenGenerator.generate(),
             List.of(caseId)
